--- a/Greens_functions_presentation.tex
+++ b/Greens_functions_presentation.tex
@@ -52,7 +52,7 @@
 \newif\ifextended
 
 \handoutfalse
-%\handouttrue
+\handouttrue
 
 \extendedfalse
 \extendedtrue
@@ -121,16 +121,13 @@
 \note{
     \begin{itemize}
     \item
-        This is intended as a quick overview of Green's functions for electrical engineers.
+        This is intended as a short overview of Green's functions for electrical engineers.
     \item
-        Green's functions are a huge subject: it's easy to get overwhelmed by calculation techniques. 
-    \item
-        Focus here will be on intuition/understanding and awareness of some key techniques.
-    \item
-        Lots of further reading provided at the end.
+        Green's functions are a huge subject: we will try to demonstrate the most important techniques and ideas.
     \item
         Tip: read a lot of different references. 
         Different authors take totally different approaches and it's interesting to see them all.
+        Lots of references are provided at the end.
     \end{itemize}
 }
 
@@ -1398,165 +1395,52 @@
         Next, we solve the Green's function equation for $ G(x,x') $.
     \item
         Next, we found that it's much easier to express $ u(x) $ in terms of $ H(x,x') $, because we can use inner products.
-        The only tricky part is finding the adjoint (usually, just use integration by parts).
-        See Dudley for a general formula for Sturm-Liouville problems.
+        The only tricky part is finding the conjunct. 
+        (Usually, just requires integration by parts.
+        See Dudley for a general formula for Sturm-Liouville problems.)
     \item
         Finally, we replace $ H(x,x') $ with $ G^*(x',x) $ (which we solved for previously), and we have our final expression for $ u(x) $.
     \end{itemize}
 }
 
-%
-%\begin{frame}[fragile]
-%    \frametitle{Simple harmonic oscillator}
-%    
-%    Original problem:
-%    \begin{align*}
-%        \frac{\d^2 u(x)}{\d x^2} + \omega_0^2 u(x) &= f(x)
-%    \end{align*}
-%    $ u(a) $ and $ u(b) $ are known.
-%
-%    ``Adjoint'' Green's function problem:
-%    \begin{align*}
-%        \frac{\d^2 H(x,x')}{\d x^2} + \omega_0^2 H(x,x') &= \delta(x - x')
-%    \end{align*}
-%    
-%
-%\end{frame}
-%
-%\note{
-%    \begin{itemize}
-%    \item
-%        Now let's look at an example with boundary conditions: a simple harmonic oscillator.
-%    \item
-%        To deal with this, we have to introduce the adjoint Green's function equation.
-%    \item
-%        In this case, the adjoint Green's function $ H(x,x') $ follows the same equation as the Green's function $ G(x,x') $, but it will have different boundary conditions.
-%    \item
-%        We want to find a good set of boundary conditions for $ H(x,x') $.
-%    \end{itemize}
-%}
-%
-%\begin{frame}[fragile]
-%    \frametitle{Simple harmonic oscillator}
-%
-%    \begin{align*}
-%        \alt<2>{G(x,x') \left[ \frac{\d^2 u(x')}{\d x^{\prime 2}} + \omega_0^2 u(x') \right] &= G(x,x') f(x')}{\frac{\d^2 u(x')}{\d x^{\prime 2}} + \omega_0^2 u(x') &= f(x')}
-%    \end{align*}
-%
-%    \begin{align*}
-%        \alt<2>{u(x') \left[ \frac{\d^2 G(x',x)}{\d x^{\prime 2}} + \omega_0^2 G(x',x) \right] &= u(x') \delta(x' - x)}{\frac{\d^2 G(x',x)}{\d x^{\prime 2}} + \omega_0^2 G(x',x) &= \delta(x' - x)}
-%    \end{align*}
-%
-%\end{frame}
-%
-%\note{
-%    \begin{itemize}
-%    \item
-%        To figure out the best boundary conditions, we use a little bit of trickery.
-%    \item
-%        First, we replace $ x \longleftrightarrow x' $ because it will make the final answer work out more nicely.
-%    \item
-%        Then we multiply the original equation by $ G(x,x') $ and the Green's functions equation with by $ u(x) $.
-%    \end{itemize}
-%}
-%
-%\begin{frame}[fragile]
-%    \frametitle{Simple harmonic oscillator}
-%  
-%    \begin{align*}
-%        \alt<2>{ \int_a^b \big[ u(x') \delta(x' - x) &- G(x,x') f(x') \big] \d x' }{  u(x') \delta(x' - x) - G(x,x') f(x') = u(x') \frac{\d^2 G(x',x)}{\d x^{\prime 2}} - G(x,x') \frac{\d^2 u(x')}{\d x^{\prime 2}}}
-%        \alt<2>{\\&= \int_a^b \left[ u(x') \frac{\d^2 G(x',x)}{\d x^{\prime 2}} - G(x,x') \frac{\d^2 u(x')}{\d x^{\prime 2}} \right] \d x' }{}
-%    \end{align*}
-%   
-%\end{frame}
-%
-%\note{
-%\begin{itemize}
-%\item
-%    Next, we subtract the two equations and integrate $ x' $ over $ [a,b] $.
-%\item
-%    The integral over $ u(x') \delta(x' - x) $ becomes just $ u(x) $.
-%\item
-%    The right hand side can be dealt with using integration by parts.
-%\end{itemize}
-%}
-%
-%\begin{frame}[fragile]
-%    \frametitle{Simple harmonic oscillator}
-%
-%    \begin{align*}
-%        u(x) &= \int_a^b G(x,x') f(x') \d x' + \left[ u(x') \frac{\d G(x',x)}{\d x'} - G(x,x') \frac{\d u(x')}{\d x'} \right]_{x'=a}^b
-%    \end{align*}
-%
-%    \pause
-%    If we set $ G(a,x) = G(b,x) = 0 $, then
-%    \begin{align*}
-%        u(x) &= \int_a^b G(x,x') f(x') \d x' + 
-%        \\
-%        & \quad + u(b) \left. \frac{\d G(x',x)}{\d x'} \right|_{x' = b} - u(a) \left. \frac{\d G(x',x)}{\d x'} \right|_{x' = a}
-%    \end{align*}
-%
-%\end{frame}
-%
-%\note{
-%\begin{itemize}
-%\item
-%    We now have a more informative expression for $ u(x) $.
-%\item
-%    We have the original integral over $ G(x,x') f(x') $, but now we also have a boundary term.
-%    (Be careful! $ x $ and $ x' $ are switched in one place.)
-%\item
-%    Problem: the last term requires us to know $ u $ and $ \d u/\d x $ at both $ x = a $ and $ x = b $.
-%    But we only know $ u $ at those points, not $ \d u / \d x $.
-%\item
-%    Tricky solution: we haven't picked the boundary conditions for $ G(x,x') $ yet, so why not set them to
-%    \begin{align*}
-%        G(a,x') = G(b,x') = 0
-%    \end{align*}
-%    Then we don't need to know $ \d u/\d x $ on the boundary anymore.
-%\end{itemize}
-%}
-%
-%\begin{frame}[fragile]
-%    \frametitle{Simple harmonic oscillator}
-% 
-%    What if we knew $ u(a) $ and $ \frac{\d u(a)}{\d x} $?
-%    \begin{align*}
-%        u(x') &= \int_a^b G(x,x') f(x) \d x + \left[ u(x) \frac{\d G(x,x')}{\d x} - G(x,x') \frac{\d u(x)}{\d x} \right]_{x=a}^b
-%    \end{align*}
-% 
-%    \pause
-%    Then set $ G(b,x') = \frac{\d G(b,x')}{\d x} = 0 $, so that
-%    \begin{align*}
-%        u(x') &= \int_a^b G(x,x') f(x) \d x + u(a) \frac{\d G(a, x')}{\d x} + G(a,x') \frac{\d u(a)}{\d x}
-%    \end{align*}
-%   
-%\end{frame}
-%
-%\note{
-%\begin{itemize}
-%\item
-%    What if we had an initial condition problem instead of a boundary value problem?
-%\item
-%    This time, we don't know $ u(b) $ or $ \frac{\d u(b)}{\d x} $, so we set $ G(b,x') = \frac{\d G(b,x')}{\d x} = 0 $ to eliminate them.
-%\item
-%    Note: the \emph{initial} value problem for $ u(x) $ corresponds to a \emph{final} value problem for $ G(x,x') $.
-%\item
-%    In general, the boundary conditions of $ G(x,x') $ are \emph{not} the same as those of $ u(x)  $: we pick them to eliminate the unknowns on the right hand side of the $ u(x') $ equation.
-%\item
-%    Boundary conditions for $ G(x,x') $ are called the ``adjoint'' boundary conditions.
-%\end{itemize}
-%}
-%
-%\begin{frame}[fragile]
-%    \frametitle{The adjoint problem}
-%
-%\end{frame}
-%
-%\note{}
-
 \section{Spectral methods}
 \label{sec:spectral_methods}
+
+\note{}
+
+\begin{frame}[fragile]
+    \frametitle{Eigenfunction expansion}
+
+    Problem:
+    \begin{align*}
+        \left( \L - \lambda \right)u(x) &= f(x); \qquad \B[u(x)] = 0
+    \end{align*}
+    where $ \L $ is self-adjoint:
+    \begin{align*}
+        \L = \L^* \quad \text{and} \quad \B = \B^*
+    \end{align*}
+    
+\end{frame}
+
+\note{}
+
+\begin{frame}[fragile]
+    \frametitle{Eigenfunction expansion}
+    
+    Eigenfunctions:
+    \begin{align*}
+        \L \phi_n(x) &= \lambda_n \phi_n(x)
+    \end{align*}
+    
+    Because $ \L $ is self-adjoint:
+    \begin{align*}
+        u(x) &= \sum_n \inprod{u}{\phi_n} \phi_n(x)
+        \\
+        f(x) &= \sum_n \inprod{f}{\phi_n} \phi_n(x)
+    \end{align*}
+    
+
+\end{frame}
 
 \note{}
 
@@ -1582,7 +1466,7 @@
     Less rigorous, but good for getting the key ideas.
 
     Folland (1992), \emph{Fourier analysis and its applications}. 
-    Chapter on generalized functions is particularly nice.
+    Rigorous. Chapter on generalized functions is particularly nice.
 
     Dudley (1994), \emph{Mathematical foundations for electromagnetic theory}.
     Great introduction to 1D Green's functions: deals with subtleties that others ignore.
@@ -1600,7 +1484,7 @@
     Huge chapter on Green's functions. Emphasis on dyadics.
 
     Morse and Feshback, \emph{Methods of theoretical physics}.
-    Another big, detailed reference. Emphasis on theory and insights.
+    Another big, detailed reference. Great resource for deeper insight and understanding.
 
     Warnick (1996), ``Electromagnetic Green functions using differential forms.''
     For the differential forms inclined.
